--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,2 +1,5 @@
 @import 'normalize.css';
-@import './reset.css'
+@import './reset.css'; /* src/index.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
